test: migrate tests to Junit 6 and improve coverage (#1409)
Closes: MODINVSTOR-1594